# ffmpeg-gif-kun

./: .gitignore  COMPLETION_SUMMARY.md  DEVELOPMENT.md  LICENSE  README.md  README.txt  build.bat  build.py  build.sh  build_requirements.txt  pyproject.toml  requirements.txt  start_ffmpeg_gui_kun.bat  start_ffmpeg_gui_kun.sh
.brand/: logo.ai  readme_top.psd
asset/: icon.icns  logo.ai
src/: ffmpeg_gui_kun.py
src/core/: __init__.py  ffmpeg_manager.py
src/gui/: __init__.py  gif_convert_tab.py  main_window.py  video_encode_tab.py
src/utils/: __init__.py  drag_drop.py  ffmpeg_downloader.py  settings.py
