[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ffmpeg-gui-kun"
version = "1.0.0"
description = "動画エンコード・GIF変換を簡単に行えるGUIアプリケーション"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "屍鬼 骸 | Mukuro Shiki", email = "noreply@github.com"},
]
keywords = ["ffmpeg", "video", "gif", "gui", "converter", "encoder"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Desktop Environment",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.0",
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
"Homepage" = "https://github.com/your-username/ffmpeg-gui-kun"
"Bug Reports" = "https://github.com/your-username/ffmpeg-gui-kun/issues"
"Source" = "https://github.com/your-username/ffmpeg-gui-kun"

[project.scripts]
ffmpeg-gui-kun = "ffmpeg_gui_kun.ffmpeg_gui_kun:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]
